--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     <address>
     <p>Email me :</p><a href=mailto:adityapb2016@gmail.com>adityapb2016@gmail.com</a>
     <p> Slide into my DM's!</p><a href="https://twitter.com/thoughts_by_adi"> @thoughts_by_adi</a>
+    </address>
     <br>
     <hr>
     <br>
@@ -19,7 +20,7 @@
       <input type="text" name="Name:" value="">
       <br>
       <label>Your Email:</label>
-      <input type="email" name="Mobile No:" value="" minlength="10" maxlength="10">
+      <input type="email" name="Email ID:">
       <br>
       <label>DOB</label>
       <input type="date" name="DOB" value="">
@@ -30,9 +31,6 @@
 <br>
     <input type="submit" />
 
-
-
     </form>
-    </address>
   </body>
 </html>
