--- a/contact.html
+++ b/contact.html
@@ -3,34 +3,57 @@
   <head>
     <meta charset="utf-8">
     <title>Contact me</title>
-  </head>
+    <style media="screen">
+      body{
+        background-color: #bbe1fa;
+      }
+      hr{
+        border-style: dotted none none;
+        background-color: #bbe1fa;
+        border-color: grey;
+        border-width: 10px;
+        height: 2px;
+        width : 30%;
+      }
+
+    </style>
+    </head>
   <body>
-    <h2>Wanna talk? Here's where you can find me! </h2>
-    <address>
-    <p>Email me :</p><a href=mailto:adityapb2016@gmail.com>adityapb2016@gmail.com</a>
-    <p> Slide into my DM's!</p><a href="https://twitter.com/thoughts_by_adi"> @thoughts_by_adi</a>
+    <center>
+      <h2>Wanna talk? Here's where you can find me! </h2>
+      <address>
+      <p>Email me :</p><a href=mailto:adityapb2016@gmail.com>adityapb2016@gmail.com</a>
+      <p> Slide into my DM's!</p><a href="https://twitter.com/thoughts_by_adi"> @thoughts_by_adi</a>
     </address>
-    <br>
-    <hr>
-    <br>
-    <h3>For further queries:</h3>
-    <form  action="mailto:adityapb2016@gmail.com" method="post" enctype="text/plain">
+      <br>
+      <hr>
+      <br>
+      <h3>For further queries:</h3>
+      <form  action="mailto:adityapb2016@gmail.com" method="post" enctype="text/plain">
 
-      <label>Your Name:</label>
-      <input type="text" name="Name:" value="">
+        <label>Your Name:</label>
+        <input type="text" name="Name:" value="">
+        <br>
+        <label>Your Email:</label>
+        <input type="email" name="Email ID:">
+        <br>
+        <label>DOB</label>
+        <input type="date" name="DOB" value="">
+        <br>
+        <label>Your message</label>
+        <br>
+        <textarea name="Your message" rows="10" cols="30"></textarea>
+  <br>
+      <input type="submit" />
       <br>
-      <label>Your Email:</label>
-      <input type="email" name="Email ID:">
       <br>
-      <label>DOB</label>
-      <input type="date" name="DOB" value="">
       <br>
-      <label>Your message</label>
-      <br>
-      <textarea name="Your message" rows="10" cols="30"></textarea>
-<br>
-    <input type="submit" />
+      <hr>
 
-    </form>
+
+
+      </form>
+    </center>
+
   </body>
 </html>
