--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
 <head>
   <meta charset="utf-8">
   <title>Aditya's Personal site</title>
+  <style>
+
+  body{
+    background-color: #bbe1fa;
+  }
+
+  hr{
+    background-color:#bbe1fa ;
+    border-style: dotted none none;
+    border-width: 10px;
+    height: 2px;
+    width: 30%;
+
+  }
+
+  </style>
 </head>
 
-<body>
+<body style="background-color: #bbe1fa;">
   <table>
     <tr>
       <td><img src="https://pbs.twimg.com/profile_images/1271196008593096704/-9IShlzV_400x400.jpg" alt="Aditya's profile pic!"></td>
@@ -61,12 +77,12 @@
 <h3>My skills</h3>
 <table cellspace="10">
   <tr>
-    <td>Guitar ⭐️⭐️⭐️ </td>
-    <td>Piano ⭐️⭐️⭐️⭐️ </td>
+    <td>Guitar ⭐️⭐️⭐️</td>
+    <td>Piano ⭐️⭐️⭐️⭐️</td>
   </tr>
   <tr>
-    <td> Coding ⭐️⭐️⭐️ </td>
-    <td> Public speaking ⭐️⭐️⭐️⭐️⭐️ </td>
+    <td> Coding ⭐️⭐️⭐️</td>
+    <td> Public speaking ⭐️⭐️⭐️⭐️⭐️</td>
   </tr>
 </table>
 </body>
