--- a/contact.html
+++ b/contact.html
@@ -2,21 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Contact me</title>
-    <style media="screen">
-      body{
-        background-color: #bbe1fa;
-      }
-      hr{
-        border-style: dotted none none;
-        background-color: #bbe1fa;
-        border-color: grey;
-        border-width: 10px;
-        height: 2px;
-        width : 30%;
-      }
-
-    </style>
+    <title>Contact|Aditya CV</title>
+    <link rel="stylesheet" href="css/styles.css">
     </head>
   <body>
     <center>
@@ -24,6 +11,8 @@
       <address>
       <p>Email me :</p><a href=mailto:adityapb2016@gmail.com>adityapb2016@gmail.com</a>
       <p> Slide into my DM's!</p><a href="https://twitter.com/thoughts_by_adi"> @thoughts_by_adi</a>
+      <p>Find me on Instagram</p><a href="https://www.instagram.com/_.adiitya/">@_.adiitya</a>
+      
     </address>
       <br>
       <hr>
@@ -37,7 +26,7 @@
         <label>Your Email:</label>
         <input type="email" name="Email ID:">
         <br>
-        <label>DOB</label>
+          <label>DOB</label>
         <input type="date" name="DOB" value="">
         <br>
         <label>Your message</label>
@@ -53,6 +42,7 @@
 
 
       </form>
+      <a href="index.html">Return to Home Page</a>
     </center>
 
   </body>
