--- a/index.html
+++ b/index.html
@@ -3,29 +3,14 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Aditya's Personal site</title>
-  <style>
-
-  body{
-    background-color: #bbe1fa;
-  }
-
-  hr{
-    background-color:#bbe1fa ;
-    border-style: dotted none none;
-    border-width: 10px;
-    height: 2px;
-    width: 30%;
-
-  }
-
-  </style>
+  <title>Home|Aditya CV</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body style="background-color: #bbe1fa;">
-  <table>
+<body>
+  <table cellspacing="20">
     <tr>
-      <td><img src="https://pbs.twimg.com/profile_images/1271196008593096704/-9IShlzV_400x400.jpg" alt="Aditya's profile pic!"></td>
+      <td><img src="circle-cropped.PNG" alt="Aditya's profile pic!"></td>
       <td><h1>Aditya Bhosle</h1>
       <p>
         <em>Web and software developer</em> <br></p>
@@ -56,7 +41,7 @@
   </ol>
   <hr noshade />
   <h3>My Academic career</h3>
-  <table>
+  <table cellspacing="10">
     <thead>
       <th>Years</th>
       <th>Institute</th>
