--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Home|Aditya CV</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="https://github.com/adityabhosle-1/cv/blob/master/CSS/styles.css">
 </head>
 
 <body>
